[project]
name = "wandao"
version = "0.1.0"
description = "万能导：多平台知识库 Markdown 导出工具"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "tllovesxs" }]
dependencies = []

[project.urls]
Homepage = "https://github.com/tllovesxs/wandao"

[project.scripts]
wandao = "wandao:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
  "wandao",
  "export_aliyun_thoughts",
  "export_yuque",
  "export_feishu",
  "export_zsxq",
]
